--- a/web/tablaVentas.xhtml
+++ b/web/tablaVentas.xhtml
@@ -64,7 +64,7 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Otras Opciones:</h6>
                             <a class="collapse-item" href="formulario_ventas.xhtml">Registrar Ventas</a>
-                            <a class="collapse-item" href="tabla.xhtml">Ver Ventas</a>
+                            <a class="collapse-item" href="tablaVentas.xhtml">Ver Ventas</a>
                         </div>
                     </div>
                 </li>
@@ -79,7 +79,7 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Otras Opciones:</h6>
                             <a class="collapse-item" href="formulario_agenda.xhtml">Registrar Agendas</a>
-                            <a class="collapse-item" href="tabla.xhtml">Ver Agendas</a>
+                            <a class="collapse-item" href="tablaAgenda.xhtml">Ver Agendas</a>
                         </div>
                     </div>
                 </li>
@@ -94,22 +94,7 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Otras Opciones:</h6>
                             <a class="collapse-item" href="formulario_inventario.xhtml">Registrar Inventarios</a>
-                            <a class="collapse-item" href="tabla.xhtml">Ver Inventarios</a>
-                        </div>
-                    </div>
-                </li>
-
-                <!-- Menu de los Modulos -->
-                <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
-                        <i class="fas fa-fw fa-wrench"></i>
-                        <span>Cotizaciones</span>
-                    </a>
-                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Otras Opciones:</h6>
-                            <a class="collapse-item" href="formulario_cotizaciones.xhtml">Registrar Cotizaciones</a>
-                            <a class="collapse-item" href="tabla.xhtml">Ver Cotizaciones</a>
+                            <a class="collapse-item" href="tablaInventario.xhtml">Ver Inventarios</a>
                         </div>
                     </div>
                 </li>
@@ -134,7 +119,6 @@
                             <a class="collapse-item" href="reportes_ventas.xhtml">Reporte Ventas</a>
                             <a class="collapse-item" href="reportes_ventas.xhtml">Reporte Agenda</a>
                             <a class="collapse-item" href="reportes_ventas.xhtml">Reporte Inventario</a>
-                            <a class="collapse-item" href="reportes_ventas.xhtml">Reporte Cotizaciones</a>
                         </div>
                     </div>
                 </li>
@@ -157,7 +141,7 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Otra Opcion:</h6>
                             <a class="collapse-item" href="formulario_crear_usuario.xhtml">Crear Usuario</a>
-                            <a class="collapse-item" href="tabla.xhtml">Ver Usuarios</a>
+                            <a class="collapse-item" href="tablaUsuarios.xhtml">Ver Usuarios</a>
                         </div>
                     </div>
                 </li>
@@ -366,7 +350,7 @@
                         <!-- DataTales Example -->
                         <div class="card shadow mb-4">
                             <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">Tablas</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Historial de ventas</h6>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
