--- a/web/formulario_crear_usuario.xhtml
+++ b/web/formulario_crear_usuario.xhtml
@@ -398,7 +398,7 @@
                                     <br/>
                                     <div class="form-group">
                                         <div class="col-xs-offset-3 col-xs-9">
-                                            <p:commandButton value="Enviar" action="#{usuariosControlador.buscarInven()}"/>
+                                           <p:commandButton value="Enviar" action="#{usuariosControlador.crearProducto()}"/>
                                             <input type="reset" class="btn btn-default" value="Limpiar"/>
                                         </div>
                                     </div>
