--- a/web/formulario_ventas.xhtml
+++ b/web/formulario_ventas.xhtml
@@ -26,7 +26,6 @@
 
         <!-- Script -->
         <script src="../js/sweetalert2.min.js"></script>
-        <script src="../js/jquery-3.4.1.min.js"></script>
         <script src="../datepicker/js/bootstrap-datepicker.min.js"></script>
 
     </h:head>
@@ -312,7 +311,7 @@
                             <!-- Elemento de navegación: información del usuario -->
                             <li class="nav-item dropdown no-arrow">
                                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Jhon Mahecha</span>
+                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Ivette Castelblanco</span>
                                     <img class="img-profile rounded-circle" src="../img/Servicios/imagen-7.jpeg"/>
                                 </a>
                                 <!-- Desplegable - Información del usuario -->
@@ -364,10 +363,12 @@
                                             <p:inputText value="#{ventaControlador.cantidad}" />
                                         </div>
                                     </div>
-                                    <div class="row form-group">
-                                        <label for="nombre" class="col-form-label col-md-4"><b>Identificacion del cliente: *</b></label>
+                                    <div class="row form-group col-md-12">
+                                        <label for="nombre" class="col-form-label col-md-4"><b> Cliente: *</b></label>
                                         <div class="col-md-8">
-                                            <p:inputText value="#{ventaControlador.idCliente}" />
+                                            <p:selectOneMenu value="#{ventaControlador.cliente}">
+                                                <f:selectItems value="#{ventaControlador.listaCliente}" var="lc" itemLabel="#{lc.nombresCliente}#{lc.apellidosCliente}" itemValue="#{lc.idCliente}"></f:selectItems>
+                                            </p:selectOneMenu>
                                         </div>
                                     </div>
                                     <div class="row form-group">
@@ -380,7 +381,7 @@
                                         <label for="" class="col-form-label  col-md-4"><b>Forma de pago:</b></label>
                                         <div class="col-md-8">
                                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                                <p:outputLabel for="console" value="Console:" />
+                                                <p:outputLabel for="console"/>
                                                 <p:selectOneRadio id="console" value="#{ventaControlador.forma}">
                                                     <f:selectItem itemLabel="Efectivo" itemValue="Efectivo" />
                                                     <f:selectItem itemLabel="Tarjeta" itemValue="Tarjeta" />
@@ -408,12 +409,11 @@
         </div>
 
         <!-- Bootstrap core JavaScript-->
-        <script src="../js/calendario.js"></script>
-        <script src="../vendor/jquery/jquery.min.js"></script>
+       
         <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
         <!-- Core plugin JavaScript-->
-        <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+       
 
         <!-- Custom scripts for all pages-->
         <script src="../js/sb-admin-2.min.js"></script>
