--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:html5="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
@@ -56,8 +57,8 @@
                         <h2>Iniciar sesión</h2>
                         <h:form id="formLogin">                            
                             <p:growl id="growlFormLogin" showDetail="true" sticky="true" />
-                            <p:inputText id="username" value="#{loginControlador.idEmpleado}"  required="true"></p:inputText>
-                            <p:password id="password" value="#{loginControlador.claveEmpleado}" required="true" feedback="false"></p:password>
+                            <p:inputText id="username" required="true" requiredMessage="Ingrese un Usuario Valido " value="#{loginControlador.idEmpleado}" html5:placeholder="Ingrese su Usuario"></p:inputText>
+                            <p:password id="password" value="#{loginControlador.claveEmpleado}" html5:placeholder="Ingrese su Contraseña" required="true" requiredMessage="Ingrese una contraseña Valida " feedback="false" ></p:password>
                             <p:commandButton action="#{loginControlador.validarEmpleado()}" value="Ingresar" update="formLogin" ajax="true"></p:commandButton>                            
                         </h:form>
                     </div>
@@ -67,7 +68,7 @@
                      
                             <h:form id="formRegistrarEmpleado">             
                                 <p:growl id="growlFormRegistrarEmpleado" showDetail="true" sticky="true" />
-                                <p:inputText id="txtIdUsuario" value="#{loginControlador.idEmpleado}" required="true" ></p:inputText>
+                                <p:inputText id="txtIdUsuario" value="#{loginControlador.idEmpleado}" html5:placeholder="Ingrese su Identificacion" required="true" ></p:inputText>
                                 <p:password id="txtClaveUsuario" value="#{loginControlador.claveEmpleado}"  feedback="false"></p:password>
                                 <p:inputText id="txtEmailUsuario" value="#{loginControlador.emailEmpleado}" ></p:inputText>
                                 <p:inputText id="txtTelefonoUsuario" value="#{loginControlador.telefonoEmpleado}" ></p:inputText>
