--- a/web/formulario_inventario.xhtml
+++ b/web/formulario_inventario.xhtml
@@ -26,7 +26,7 @@
 
         <!-- Script -->
         <script src="../js/sweetalert2.min.js"></script>
-        <script src="../js/jquery-3.4.1.min.js"></script>
+
         <script src="../datepicker/js/bootstrap-datepicker.min.js"></script>
 
     </h:head>
@@ -383,7 +383,9 @@
                                     <div class="row form-group">
                                         <label for="nombre" class="col-form-label col-md-4"><b>Proveedor: *</b></label>
                                         <div class="col-md-8">
-                                            <p:inputText value="#{inventarioControlador.proveedores}" />
+                                            <p:selectOneMenu value="#{inventarioControlador.proveedores}">
+                                                <f:selectItems value="#{inventarioControlador.listaProv}" var="lpro" itemLabel="#{lpro.nombresProveedor}#{lpro.apellidosProveedor}" itemValue="#{lpro.idProveedor}}"></f:selectItems>
+                                            </p:selectOneMenu> 
                                         </div>
                                     </div>
 
@@ -404,7 +406,7 @@
 
         <!-- Bootstrap core JavaScript-->
         <script src="../js/calendario.js"></script>
-        <script src="../vendor/jquery/jquery.min.js"></script>
+      
         <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
         <!-- Core plugin JavaScript-->
